<resources>
    <string name="app_name">MindTrek</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="action_settings">Settings</string>

    <string name="root_url">https://mindtrek-09aafa992284.herokuapp.com</string>
<!--    <string name="root_url">http://10.0.2.2:5000</string>-->

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search_mind_trek">Search Mind Trek</string>
    <string name="search_logo">Search</string>
    <string name="tick_image">Tick image</string>
    <string name="tick_image_for_free_mode">"Tick image "</string>
    <string name="quiz_type">QUIZ TYPE</string>
    <string name="mock_mode">Mock mode</string>
    <string name="free_mode">Free Mode</string>
    <string name="mock_schedule">Mock Schedule</string>
    <string name="zero">00</string>
    <string name="welcome">Welcome</string>
    <string name="mind_trekker">Mind Trekker</string>
    <string name="mind_trek_logo">Logo</string>
    <string name="mind_trek_log">Mind trek logo</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_login">Login</string>
    <string name="score">Scores</string>
    <string name="corrections">Corrections</string>
    <string name="nav_header_subtitle">email</string>
    <string name="nav_header_desc">username</string>
    <string name="menu_profile">Profile</string>
</resources>