<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.haneef.mindtrek.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/profile_to_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_score"
        android:name="com.haneef.mindtrek.ui.quiz.ScoresFragment"
        android:label="@string/score"
        tools:layout="@layout/fragment_score" >
    <action
        android:id="@+id/score_to_quiz"
        app:destination="@id/nav_quiz" />
    <action
        android:id="@+id/score_to_home"
        app:destination="@id/nav_home" />
    <action
        android:id="@+id/view_corrections"
        app:destination="@id/nav_corrections" />
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.haneef.mindtrek.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_to_quiz"
            app:destination="@id/nav_quiz" />
        <action
            android:id="@+id/home_to_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/home_to_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.haneef.mindtrek.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/login_to_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.haneef.mindtrek.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.haneef.mindtrek.ui.quiz.QuizFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz" >
        <action
            android:id="@+id/quiz_to_score"
            app:destination="@id/nav_score"
            app:popUpTo="@id/nav_home"/>

        <action
            android:id="@+id/quiz_to_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment  android:id="@+id/nav_corrections"
        android:name="com.haneef.mindtrek.ui.quiz.CorrectionsFragment"
        android:label="@string/corrections">

    </fragment>
</navigation>